--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,23 +9,23 @@ jobs:
       - name: "Configure SSH key"
         run: |
           mkdir -p ~/.ssh
-          echo "$SERVER_SSH_KEY" > ~/.ssh/aws
+          echo "$SSH_KEY" > ~/.ssh/aws
           chmod 600 ~/.ssh/aws
           cat >>~/.ssh/config <<END
           Host kamuridesu.tech
-            HostName $SSH_HOST
+            HostName kamuridesu.tech
             User $SSH_USER
-            IdentityFile ~/.ssh/staging.key
+            IdentityFile ~/.ssh/aws
             StrictHostKeyChecking no
           END
         env:
-            SSH_USER: ${{ secrets.STAGING_SSH_USER }}
-            SSH_KEY: ${{ secrets.SSH_USER }}
+            SSH_USER: ${{ secrets.SSH_USER }}
+            SSH_KEY: ${{ secrets.SERVER_SSH_KEY }}
             SSH_HOST: ${{ secrets.SSH_HOST }}
         
       - name: "Update repository"
-        run: ssh kamuridesu.tech "git clone https://github.com/kamuridesu/r34bot.git || cd r34bot && git pull && cd .."
+        run: ssh ${{ secrets.SSH_USER }}@kamuridesu.tech "git clone https://github.com/kamuridesu/r34bot.git || cd r34bot && git pull && cd .."
       - name: "Build image"
-        run: ssh kamuridesu.tech "cd r34bot; sudo docker build -t r34bot ."
+        run: ssh ${{ secrets.SSH_USER }}@kamuridesu.tech "cd r34bot; sudo docker build -t r34bot ."
       - name: "Deploy new version"
-        run: ssh kamuridesu.tech "sudo docker rm -f r34bot; sudo docker run --name r34bot -d r34bot"
+        run: ssh ${{ secrets.SSH_USER }}@kamuridesu.tech "sudo docker rm -f r34bot; sudo docker run --name r34bot -d r34bot"
