--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,13 +20,15 @@ jobs:
           END
         env:
             SSH_KEY: ${{ secrets.SERVER_SSH_KEY }}
-            SSH_HOST: ${{ secrets.SSH_HOST }}
         
       - name: "Update repository"
-        run: ssh admin@kamuridesu.tech "rm -rf r34bot; git clone https://github.com/kamuridesu/r34bot.git"
+        run: ssh admin@kamuridesu.tech "rm -rf ${{ github.repository }}; git clone ${{ github.repositoryUrl }}"
       - name: "Add token"
-        run: ssh admin@kamuridesu.tech 'echo "${{ secrets.TOKEN }}" > /home/admin/r34bot/tokens.json'
+        run: ssh admin@kamuridesu.tech 'echo "${{ secrets.TOKEN }}" > /home/admin/${{ github.repository }}/tokens.json'
+      - name: "Parse token"
+        run: |
+          ssh admin@kamuridesu.tech "cd ${{ github.repository }}; curl https://gist.githubusercontent.com/kamuridesu/970883ca8b505f8d96d80a794e9a612b/raw/8e05c60fa223f25377546ceba05450de12b5e6fe/pypelineJsonHelper.sh | bash"
       - name: "Build image"
-        run: ssh admin@kamuridesu.tech "cd r34bot; sudo docker build -t r34bot ."
+        run: ssh admin@kamuridesu.tech "cd ${{ github.repository }} && sudo docker build -t ${{ github.repository }} ."
       - name: "Deploy new version"
-        run: ssh admin@kamuridesu.tech "sudo docker rm -f r34bot; sudo docker run --name r34bot -d r34bot"
+        run: ssh admin@kamuridesu.tech "sudo docker rm -f email-notifier; sudo docker run --name email-notifier --restart always -d email-notifier"
