--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
             SSH_KEY: ${{ secrets.SERVER_SSH_KEY }}
         
       - name: "Update repository"
-        run: ssh admin@kamuridesu.tech "rm -rf ${{ github.event.repository.name }}; git clone $(python -c "print('${{ github.repositoryUrl }}'.replace('git', 'https', 1))")
+        run: ssh admin@kamuridesu.tech "rm -rf ${{ github.event.repository.name }}; git clone $(python -c \"print('${{ github.repositoryUrl }}'.replace('git', 'https', 1))\")
       - name: "Add token"
         run: ssh admin@kamuridesu.tech 'echo "${{ secrets.TOKEN }}" > /home/admin/${{ github.event.repository.name }}/tokens.json'
       - name: "Parse token"
