--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,6 @@ jobs:
       - name: "Update repository"
         run: ssh admin@kamuridesu.tech "rm -rf ${{ github.event.repository.name }}; git clone https://github.com/${{ github.repository }}.git"
       - name: "Build image"
-        run: ssh admin@kamuridesu.tech "cd ${{ github.event.repository.name }} && sudo docker build -t ${{ github.repository }} ."
+        run: ssh admin@kamuridesu.tech "cd ${{ github.event.repository.name }} && sudo docker rm -f ${{ github.event.repository.name }} sudo docker build -t ${{ github.repository }} ."
       - name: "Deploy new version"
         run: ssh admin@kamuridesu.tech "sudo docker rm -f ${{ github.repository }}; sudo docker run --name ${{ github.event.repository.name }} --restart always -e TELEGRAM_BOT_TOKEN=${{ secrets.TOKEN }} -d ${{ github.repository }}"
