--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CD
 on: [push, pull_request, workflow_dispatch]
 jobs:
   deploy:
@@ -12,18 +12,20 @@ jobs:
           echo "$SSH_KEY" > ~/.ssh/aws
           chmod 600 ~/.ssh/aws
           cat >>~/.ssh/config <<END
-          Host kamuridesu.tech
-            HostName kamuridesu.tech
-            User admin
+          Host $IP_ADDR
+            HostName $IP_ADDR
+            User $USERNAME
             IdentityFile ~/.ssh/aws
             StrictHostKeyChecking no
           END
         env:
             SSH_KEY: ${{ secrets.SERVER_SSH_KEY }}
+            IP_ADDR: ${{ secrets.IP_ADDR }}
+            USERNAME: ${{ secrets.SERVER_USER }}
         
       - name: "Update repository"
-        run: ssh admin@kamuridesu.tech "rm -rf ${{ github.event.repository.name }}; git clone https://github.com/${{ github.repository }}.git"
+        run: ssh ${{ secrets.SERVER_USER }}@${{ secrets.IP_ADDR }} "rm -rf ${{ github.event.repository.name }}; git clone https://github.com/${{ github.repository }}.git"
       - name: "Build image"
-        run: ssh admin@kamuridesu.tech "cd ${{ github.event.repository.name }} && sudo docker rm -f ${{ github.event.repository.name }} && sudo docker build -t ${{ github.repository }} ."
+        run: ssh ${{ secrets.SERVER_USER }}@${{ secrets.IP_ADDR }} "cd ${{ github.event.repository.name }} && sudo docker rm -f ${{ github.event.repository.name }} && sudo docker build -t ${{ github.repository }} ."
       - name: "Deploy new version"
-        run: ssh admin@kamuridesu.tech "sudo docker rm -f ${{ github.repository }}; sudo docker run --name ${{ github.event.repository.name }} --restart always -e TELEGRAM_BOT_TOKEN=${{ secrets.TOKEN }} --memory=70m -d ${{ github.repository }}"
+        run: ssh ${{ secrets.SERVER_USER }}@${{ secrets.IP_ADDR }} "sudo docker rm -f ${{ github.repository }}; sudo docker run --name ${{ github.event.repository.name }} --restart always -e TELEGRAM_BOT_TOKEN=${{ secrets.TOKEN }} --memory=70m -d ${{ github.repository }}"
